--- a/src/templates/landing/vote.html
+++ b/src/templates/landing/vote.html
@@ -81,7 +81,7 @@
                 data: data,
             }).done(function(data) {
                 if(data.success){
-                    window.location.href = data.redirect_url
+                    window.location.href = data.redirect_url + "#votacion"
                 }
             });
     }
