FIX email length

--- a/src/templates/landing_3/common/_header.html
+++ b/src/templates/landing_3/common/_header.html
@@ -77,11 +77,11 @@
             <div class="g8GroupInput one">
                 <div class="g8Input">
                     <span>{{company.email_names_field_title}}</span>
-                    <input type="text" id="login_email"  maxlength="30" class="g8Box  validate[required]" name="{{form_login.email.html_name}}">
+                    <input type="text" id="login_email" class="g8Box  validate[required]" name="{{form_login.email.html_name}}">
                 </div>
                 <div class="g8Input password">
                     <span>Contraseña</span>
-                    <input type="password" id="login_passwowrd" maxlength="30" class="g8Box validate[required]" name="{{form_login.password.html_name}}">
+                    <input type="password" id="login_passwowrd" class="g8Box validate[required]" name="{{form_login.password.html_name}}">
                     <a href="#" class="show-hide-pass"></a>
                 </div>
             </div>
