--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -212,6 +212,7 @@
                 {% endif %}
             </div>
             <div class="g8GroupInput two">
+                {% if company.country %}
                 <div class="g8Input select">
                     <span>{{company.country_names_field_title}} *</span>
                     <select name="{{form_register.country.html_name}}" id="" class="g8Box validate[required]">
@@ -221,6 +222,7 @@
                         {% endfor %}
                     </select>
                 </div>
+                {% endif %}
                 {% if company.occupation %}
                     <div class="g8Input">
                         <span>{{company.occupation_names_field_title}} *</span>
