change title text

--- a/src/templates/landing/common/_base.html
+++ b/src/templates/landing/common/_base.html
@@ -172,6 +172,7 @@
                                     parrafo_register.hide();
                                     var register_form = $('.register-form')
                                     register_form.hide();
+                                    $('.register-title-text').html('Registro Exitoso')
                                     $('.message-waiting-confirmation').html(data.confirmed_message)
                                     $('.waiting-confirmation-form').show();
                                     setTimeout(()=>{
