--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -135,7 +135,7 @@
 <div class="g8PopupForm formRegistro pr">
     <a href="#" class="g8ClosePopup icon-close pa closeRegistro"></a>
     {% if allow_register %}
-    <h3>{{header_section.register_form_title}}</h3>
+    <h3 class="register-title-text">{{header_section.register_form_title}}</h3>
     <div class="g8Form warning-form" style="display:none;">
         <div class="gParrafo message-warning">
         </div>
