--- a/src/templates/landing/common/_base.html
+++ b/src/templates/landing/common/_base.html
@@ -174,6 +174,10 @@
                                     register_form.hide();
                                     $('.register-title-text').html('Registro Exitoso')
                                     $('.message-waiting-confirmation').html(data.confirmed_message)
+                                    $('.waiting-confirm-button').click(function(e){
+                                        e.preventDefault();
+                                        window.location.href = data.redirect_url
+                                    })
                                     $('.waiting-confirmation-form').show();
                                     setTimeout(()=>{
                                         window.location.href = data.redirect_url
