--- a/src/templates/landing/common/_header.html
+++ b/src/templates/landing/common/_header.html
@@ -79,7 +79,7 @@
                                     {% if company_user.in_person %}
                                         <li><a href="{{ticket_url}}">Mi Ticket</a></li>
                                     {% endif %}
-                                    {% if company_user.virtual or request.company.enable_credentials %}
+                                    {% if company_user.virtual and request.company.enable_credentials %}
                                         <li><a href="{{credential_url}}">Mi credencial</a></li>
                                     {% endif %}
                                     {% if company_user.certificate %}
