Add preferences to dasboard

--- a/src/templates/admin/dashboard.html
+++ b/src/templates/admin/dashboard.html
@@ -229,6 +229,11 @@
                                                 <span>Votaciones: {{votes_number}}</span>
                                         </button>
                                         </a>
+                                        <a id="export_preferences">
+                                            <button class="dt-button btn btn-warning btn-add-record ml-2" tabindex="0" aria-controls="DataTables_Table_0" type="button">
+                                                <span>Preferencias</span>
+                                        </button>
+                                        </a>
                                     </div>
                                     {% comment %} <br>
                                     <div class="card-body p-0">
