Add additional terms

--- a/src/templates/landing_3/common/_base.html
+++ b/src/templates/landing_3/common/_base.html
@@ -324,6 +324,28 @@
                 });
         }
     });
+    {% if show_additional_terms_pop_up %}
+        OVERLAY.classList.add('active')
+    {% endif %}
+
+    $('.validateAcceptTerms').click(function(e){
+        e.preventDefault();
+        var item = $(this);
+        var status = item.attr('data-status')
+        $.ajax({
+            url : "/save_accepted_additional_terms/",
+            type : "post",
+            data: {
+                status: status,
+                csrfmiddlewaretoken: '{{ csrf_token }}'
+            },
+        }).done(function(data) {
+            if(data.success){
+                $('.confirmAdditional').removeClass('active')
+            }else{
+            }
+        });
+    });
 
     </script>
 
