--- a/src/templates/landing_3/common/_header.html
+++ b/src/templates/landing_3/common/_header.html
@@ -386,7 +386,7 @@
     <div class="g8PopupForm b2PopupConfirm confirmAdditional pr active">
         <div class="g8PopupContent">
             {% comment %} <h3>Confirmar Asistencia</h3> {% endcomment %}
-            <div class="gParrafo confirmAdditionalMsg">
+            <div class="gParrafo confirmAdditionalMsg" style="text-align: center !important;">
                 Acepto el Consentimiento para<a target="_blank" href="{{company.additional_terms.url}}"> usos adicionales y Transferencia de Información</a>
             </div>
             <div class="b2Buttons g8Buttons f aic jcc">
