Fix texts for buttons

--- a/src/templates/landing_3/common/_header.html
+++ b/src/templates/landing_3/common/_header.html
@@ -390,8 +390,8 @@
                 Acepto el Consentimiento para<a target="_blank" href="{{company.additional_terms.url}}"> usos adicionales y Transferencia de Información</a>
             </div>
             <div class="b2Buttons g8Buttons f aic jcc">
-                <a href="#" data-status="1" class="gButton b2accept validateAcceptTerms">Sí</a>
-                <a href="#" data-status="0" class="gButton b2cancel validateAcceptTerms">No</a>
+                <a href="#" data-status="1" class="gButton b2accept validateAcceptTerms">Aceptar</a>
+                <a href="#" data-status="0" class="gButton b2cancel validateAcceptTerms">Rechazar</a>
             </div>
         </div>
     </div>
