--- a/src/templates/landing_3/chat.html
+++ b/src/templates/landing_3/chat.html
@@ -54,9 +54,32 @@
 </section>
 
 {% endblock %}
-
 {% block jsfinal %}
+<script src="/static/chat/reconnecting-websocket.js"></script>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+      var iframe = document.querySelector('iframe[src*="vimeo.com"]');
+      if (!iframe) return;
+      iframe.setAttribute('referrerpolicy', 'origin-when-cross-origin');
+
+
+
+      var metaReferrer = document.createElement('meta');
+      metaReferrer.name = 'referrer';
+      metaReferrer.content = 'origin';
+      document.head.appendChild(metaReferrer);
+    });
+</script>
 <script type="text/javascript">
+    var roomName = {{ room_name_json }};
+    var username = '{{logged_user.names}}';
+    var email_user = '{{logged_user.email}}';
+    var roomId = {{ room_id }};
+    var ws_scheme = window.location.protocol == "https:" ? "wss" : "ws";
+
+    var chatSocket = new ReconnectingWebSocket(
+        ws_scheme + '://' + "{{chat_url}}" +
+        '/ws/chat/' + roomName + '/');
 
     var video = document.getElementById("videoTransmision");
     document.addEventListener('touchstart', function() {
@@ -65,21 +88,74 @@
 
     let elsendMessage = document.getElementById("sendMessage");
     let elboxMessage = document.getElementById("boxMessage");
+    document.querySelector('#boxMessage').onkeyup = function(e) {
+        if (e.keyCode === 13) {  // enter, return
+                document.querySelector('#sendMessage').click();
+            }
+    };
 
-    const createLi = (text,time) => {
+    chatSocket.onopen = function(e) {
+        $('.b14ListChat ul').html('');
+        fetchMessages();
+      }
+
+    function fetchMessages() {
+    chatSocket.send(JSON.stringify(
+        {'command': 'fetch_messages',
+        'room': {{ room_id }}}));
+    }
+
+    chatSocket.onmessage = function(e) {
+        var data = JSON.parse(e.data);
+        console.log(e.data, 'E DATA')
+        if (data['command'] === 'messages') {
+          for (let i=0; i<data['messages'].length; i++) {
+            createLi(data['messages'][i], "");
+          }
+        } else if (data['command'] === 'new_message'){
+          createLi(data['message'], "");
+        }
+    };
+
+    chatSocket.onclose = function(e) {
+        console.error('Chat socket closed unexpectedly');
+    };
+
+    const createLi = (data, time) => {
+        var author = data['names'];
+        var email = data['author'];
+        var admin = data['admin']
         let li = document.createElement("li");
-        // posLeft --> receptor
-        // posRight --> emisor
-        li.className = "posRight";
-        let ellistmessages = document.getElementById("listmessages");
-        
-        var htmlString = `
-                    <h5>julio</h5>
-                    <h4 class="textMessage" style="background:blue;color:yellow">${text}</h4>
-                    <span class="timeMessage">${time}</span>
-                `;
-        li.innerHTML = htmlString
-        ellistmessages.appendChild(li);
+        let set_class= ""
+        if (admin){
+            li.className = "posLeft";
+            let ellistmessages = document.getElementById("listmessages");
+            var htmlString = `
+                        <h5 class="otherPersonMessage" style="color: #FF6666">${author}</h5>
+                        <h4 class="textMessage" style="background: #FF6666;color: #FFF;">${data.content}</h4>
+                        <span class="timeMessage">-</span>
+                    `;
+            li.innerHTML = htmlString
+            ellistmessages.appendChild(li);
+        }else{
+            if(email == email_user){
+                li.className = "posRight";
+                set_class = ""
+            }else{
+                li.className = "posLeft";
+                set_class = "otherPersonMessage"
+            }
+            let ellistmessages = document.getElementById("listmessages");
+            var htmlString = `
+                        <h5 class="${set_class}" >${author}</h5>
+                        <h4 class="textMessage">${data.content}</h4>
+                        <span class="timeMessage">-</span>
+                    `;
+            li.innerHTML = htmlString
+            ellistmessages.appendChild(li);
+        }
+
+
     }
 
     var horaFormateada
@@ -107,24 +183,37 @@
     elsendMessage.addEventListener('click', function(e){
         e.preventDefault();
         let getMessage = elboxMessage.value;
-        cretateTime();
-        createLi(getMessage,horaFormateada)
+        console.log(getMessage, 'GET MESSAGE')
+        // cretateTime();
+        if (!getMessage.replace(/\s/g, '').length) {
+        }
+        else{
+            console.log('SEND DATA TO SOCKET')
+            chatSocket.send(JSON.stringify({
+                'command': 'new_message',
+                'message': getMessage,
+                'from': '{{logged_user.email}}',
+                'names': '{{logged_user.names}}',
+                'room': {{ room_id }}
+            }));
+        }
+        // createLi(getMessage, "")
         elboxMessage.value = ""
         elboxMessage.focus();
         scrollChatToBottom()
     });
 
-    elboxMessage.addEventListener("keydown", function(event) {
-        let getMessage = this.value;
-        if (event.keyCode === 13) { 
-            cretateTime();
-            createLi(getMessage,horaFormateada)
+    // elboxMessage.addEventListener("keydown", function(event) {
+    //     let getMessage = this.value;
+    //     if (event.keyCode === 13) { 
+    //         cretateTime();
+    //         createLi(getMessage,horaFormateada)
             
-            scrollChatToBottom()
-            setTimeout(()=>this.value = "",1)
+    //         scrollChatToBottom()
+    //         setTimeout(()=>this.value = "",1)
             
-        }
-    });
+    //     }
+    // });
 
 
 </script>   
