--- a/src/templates/landing_3/common/_header.html
+++ b/src/templates/landing_3/common/_header.html
@@ -326,7 +326,7 @@
                 {% endif %}
                 {% if company.additional_terms %}
                 <div class="g8Checkbox">
-                    <input id="check2" type="checkbox" name="{{form_register.additional_terms.html_name}}">
+                    <input id="check2" type="checkbox" checked name="{{form_register.additional_terms.html_name}}">
                     <label for="check2">
                         Acepto el Consentimiento para
                         <a target="_blank" href="{{company.additional_terms.url}}">usos adicionales y Transferencia de Información</a>
