--- a/src/templates/landing_3/chat.html
+++ b/src/templates/landing_3/chat.html
@@ -131,8 +131,8 @@
             li.className = "posLeft";
             let ellistmessages = document.getElementById("listmessages");
             var htmlString = `
-                        <h5 class="otherPersonMessage" style="color: #FF6666">${author}</h5>
-                        <h4 class="textMessage" style="background: #FF6666;color: #FFF;">${data.content}</h4>
+                        <h5 class="otherPersonMessage" style="color: #fe1fb0">${author}</h5>
+                        <h4 class="textMessage" style="background: #fe1fb0;color: #FFF;">${data.content}</h4>
                         <span class="timeMessage">-</span>
                     `;
             li.innerHTML = htmlString
