Change backgroun color for chat

--- a/src/templates/landing_3/chat.html
+++ b/src/templates/landing_3/chat.html
@@ -25,7 +25,7 @@
                 <!-- OPCIÒN CAMPO VIDEO -->
                 <iframe src="{{event.video_url}}" allow="fullscreen" allowfullscreen frameborder="0"></iframe>
             </div>
-            <div class="b14Right">
+            <div class="b14Right" style="background: #000;">
                 <h3>Chat</h3>
                 <div class="b14ContentChat">
                     <div class="b14ListChat">
