--- a/src/templates/landing_3/chat.html
+++ b/src/templates/landing_3/chat.html
@@ -55,6 +55,7 @@
 
 {% endblock %}
 {% block jsfinal %}
+{% if event.open_transmission %}
 <script src="/static/chat/reconnecting-websocket.js"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function() {
@@ -221,5 +222,6 @@
     // });
 
 
-</script>   
+</script>
+{% endif %}
 {% endblock %}
