--- a/src/templates/landing/certificate.html
+++ b/src/templates/landing/certificate.html
@@ -29,7 +29,7 @@
             padding-top: 1200px;
             font-size: 100px;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-            color: white; /* Color del texto */
+            color: {{c_settings.letter_color}}; /* Color del texto */
             font-family: "InterTight";
         }
     </style>
