--- a/src/templates/landing/certificate.html
+++ b/src/templates/landing/certificate.html
@@ -26,7 +26,7 @@
             text-align: center;
         }
         .name_text {
-            padding-top: 1200px;
+            padding-top: {{c_settings.padding_top}};
             font-size: 100px;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
             color: {{c_settings.letter_color}}; /* Color del texto */
